added parseAndInfer to Language.Hakaru.Utilities, replaced function in commands: compile, hakaru, and hkc

--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -73,6 +73,7 @@ Library
                        Language.Hakaru.Evaluation.ExpectMonad,
                        Language.Hakaru.Expect,
                        Language.Hakaru.Inference,
+                       Language.Hakaru.Utilities,
                        Data.Number.Nat,
                        Data.Number.Natural
 
