--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -215,21 +215,21 @@ Executable normalize
 
 
 ----------------------------------------------------------------
-Executable hkc
-    Main-is:           HKC.hs
-    Hs-Source-Dirs:    commands/hkc
-    Default-Language:  Haskell2010
-    GHC-Options:       -O2 -Wall -fwarn-tabs
+-- Executable hkc
+--     Main-is:           HKC.hs
+--     Hs-Source-Dirs:    commands/hkc
+--     Default-Language:  Haskell2010
+--     GHC-Options:       -O2 -Wall -fwarn-tabs
 
-    build-depends:     base             >= 4.7  && < 5.0,
-                       containers       >= 0.5  && < 0.6,
-                       text             >= 0.11 && < 1.3,
-                       language-c       >= 0.0,
-                       mtl              >= 2.1,
-                       pretty           >= 1.1  && < 1.2,
-                       pretty-show      >= 1.6,
-                       hakaru           >= 0.3,
-                       semigroups       >= 0.16
+--     build-depends:     base             >= 4.7  && < 5.0,
+--                        containers       >= 0.5  && < 0.6,
+--                        text             >= 0.11 && < 1.3,
+--                        language-c       >= 0.0,
+--                        mtl              >= 2.1,
+--                        pretty           >= 1.1  && < 1.2,
+--                        pretty-show      >= 1.6,
+--                        hakaru           >= 0.3,
+--                        semigroups       >= 0.16
 
 
 ----------------------------------------------------------------
