--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -74,6 +74,8 @@ Library
                        Language.Hakaru.Expect,
                        Language.Hakaru.Inference,
                        Language.Hakaru.Utilities,
+                       Language.Hakaru.CodeGen.Wrapper,
+                       Language.Hakaru.CodeGen.Flatten,
                        Data.Number.Nat,
                        Data.Number.Natural
 
@@ -100,7 +102,8 @@ Library
                        process            >= 1.1  && < 2.0,
                        HUnit              >= 1.2  && < 2.0,
                        mtl                >= 2.1,
-                       filepath           >= 1.1.0.2
+                       filepath           >= 1.1.0.2,
+                       language-c         >= 0.0
 
 ----------------------------------------------------------------
 Test-Suite system-testsuite
@@ -217,20 +220,15 @@ Executable normalize
 ----------------------------------------------------------------
 Executable hkc
     Main-is:           HKC.hs
-    Hs-Source-Dirs:    commands/hkc
+    Hs-Source-Dirs:    commands
     Default-Language:  Haskell2010
     GHC-Options:       -O2 -Wall -fwarn-tabs
-
-    other-modules:     HKC.Flatten
-                       HKC.CodeGen
 
     build-depends:     base             >= 4.7  && < 5.0,
                        containers       >= 0.5  && < 0.6,
                        text             >= 0.11 && < 1.3,
-                       language-c       >= 0.0,
                        mtl              >= 2.1,
                        pretty           >= 1.1  && < 1.2,
-                       pretty-show      >= 1.6,
                        hakaru           >= 0.3,
                        semigroups       >= 0.16
 
