--- a/.travis.yml
+++ b/.travis.yml
@@ -126,7 +126,7 @@ script:
 - |
   case "$BUILD" in
     stack)
-      stack --no-terminal -v $ARGS test --haddock --no-haddock-deps
+      stack --no-terminal $ARGS test --haddock --no-haddock-deps
       ;;
     cabal)
       cabal configure --enable-tests --enable-benchmarks -v2 --ghc-options="-O0" # removed -Werror
