--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -82,6 +82,7 @@ Library
                        Language.Hakaru.CodeGen.HOAS.Expression,
                        Language.Hakaru.CodeGen.HOAS.Declaration,
                        Language.Hakaru.CodeGen.HOAS.Statement,
+                       Language.Hakaru.CodeGen.HOAS.Function,
                        Data.Number.Nat,
                        Data.Number.Natural
 
