--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -235,6 +235,7 @@ Executable hkc
                        mtl                  >= 2.1,
                        optparse-applicative >= 0.11 && < 0.13,
                        pretty               >= 1.1  && < 1.2,
+                       process              >= 1.1  && < 2.0,
                        hakaru               >= 0.3,
                        semigroups           >= 0.16
 
