Adding density command

--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -181,6 +181,19 @@ Executable simplify
                        hakaru               >= 0.3
 
 ----------------------------------------------------------------
+Executable density
+    Main-is:           Density.hs
+    Hs-Source-Dirs:    commands
+    Default-Language:  Haskell2010
+    GHC-Options:       -O2 -Wall -fwarn-tabs
+
+    build-depends:     base             >= 4.7  && < 5.0,
+                       mwc-random       >= 0.13 && < 0.14,
+                       text             >= 0.11 && < 1.3,
+                       pretty           >= 1.1  && < 1.2,
+                       hakaru           >= 0.3
+ 
+----------------------------------------------------------------
 Executable disintegrate
     Main-is:           Disintegrate.hs
     Hs-Source-Dirs:    commands
