Add import to cabal file

--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -55,6 +55,7 @@ Library
                        Language.Hakaru.Syntax.Prelude,
                        Language.Hakaru.Parser.AST,
                        Language.Hakaru.Parser.Maple,
+                       Language.Hakaru.Parser.Import,
                        Language.Hakaru.Parser.Parser,
                        Language.Hakaru.Parser.SymbolResolve,
                        Language.Hakaru.Pretty.Haskell,
