--- a/stack.yaml
+++ b/stack.yaml
@@ -9,5 +9,10 @@ packages:
 extra-deps:
  - indentation-core-0.0
  - indentation-parsec-0.0
- - pretty-1.1.3.2
+ - pretty-1.1.3.3
  - logfloat-0.13.3.3
+
+ # Version Cabal-1.24.1.0 (which is in lts 7.12) seems to have impossible bound `base (>1 && <1),` ?? 
+ # at least on hackage (https://hackage.haskell.org/package/Cabal-1.24.1.0)
+ # Proper solution (?): lts-7.15 
+ - Cabal-1.24.2.0
