--- a/stack.yaml
+++ b/stack.yaml
@@ -16,3 +16,11 @@ extra-deps:
  # at least on hackage (https://hackage.haskell.org/package/Cabal-1.24.1.0)
  # Proper solution (?): lts-7.15 
  - Cabal-1.24.2.0
+
+ # This pulls in about 5 additional transitive dependencies (building Cabal still takes 
+ # about 80% of the compile time for the dependencies, total...)
+ - tasty-hunit-adapter-1.1
+ - tasty-hunit-0.9.2
+ - tasty-0.11.0.4
+ - tasty-rerun-1.1.6
+ - tasty-html-0.4.1.1
