--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -46,6 +46,7 @@ Library
                        Language.Hakaru.Types.Sing,
                        Language.Hakaru.Types.HClasses,
                        Language.Hakaru.Types.Coercion,
+                       Language.Hakaru.Syntax.ANF,
                        Language.Hakaru.Syntax.AST,
                        Language.Hakaru.Syntax.AST.Transforms,
                        Language.Hakaru.Syntax.AST.Sing,
