Move summarization tests to text format
Try: make SummaryT.out

--- a/maple/Makefile
+++ b/maple/Makefile
@@ -1,4 +1,4 @@
-all: ppaml.mla NewSLOTests.out PlateT.out # call-graph.pdf
+all: ppaml.mla NewSLOTests.out PlateT.out SummaryT.out # call-graph.pdf
 
 ppaml.mla: update-archive.mpl BindingTools.mpl Hakaru.mpl KB.mpl Loop.mpl NewSLO.mpl Summary.mpl
 	maple -q $<
