--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -55,6 +55,7 @@ Library
                        Language.Hakaru.Syntax.AST.Sing,
                        Language.Hakaru.Syntax.AST.Eq,
                        Language.Hakaru.Syntax.CSE,
+                       Language.Hakaru.Syntax.Hoist,
                        Language.Hakaru.Syntax.TypeCheck,
                        Language.Hakaru.Syntax.TypeOf,
                        Language.Hakaru.Syntax.Prelude,
