--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -264,8 +264,8 @@ Executable hkc
                        optparse-applicative >= 0.11 && < 0.14,
                        pretty               >= 1.1  && < 1.2,
                        process              >= 1.1  && < 2.0,
-                       hakaru               >= 0.3,
-                       semigroups           >= 0.16
+                       semigroups           >= 0.16,
+                       hakaru               >= 0.3
 
 
 ----------------------------------------------------------------
