--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -152,39 +152,39 @@ Test-Suite system-testsuite
                        text               >= 0.11 && < 1.3
 
 ----------------------------------------------------------------
-Test-Suite system-testsuite-tasty
-    Type:              exitcode-stdio-1.0
-    Main-is:           Tests/TestSuiteTasty.hs
-    Hs-Source-Dirs:    haskell
-    Default-Language:  Haskell2010
-    GHC-Options:       -Wall -fwarn-tabs -main-is Tests.TestSuiteTasty.main
+-- Test-Suite system-testsuite-tasty
+--     Type:              exitcode-stdio-1.0
+--     Main-is:           Tests/TestSuiteTasty.hs
+--     Hs-Source-Dirs:    haskell
+--     Default-Language:  Haskell2010
+--     GHC-Options:       -Wall -fwarn-tabs -main-is Tests.TestSuiteTasty.main
 
-    Build-Depends:     base               >= 4.6  && < 5.0,
-                       Cabal              >= 1.16,
-                       ghc-prim           >= 0.3  && < 0.6,
-                       indentation-parsec >= 0.0,
-                       transformers       >= 0.3  && < 0.6,
-                       containers         >= 0.5  && < 0.6,
-                       semigroups         >= 0.16,
-                       logfloat           >= 0.13 && < 0.14,
-                       parsec             >= 3.1  && < 3.2,
-                       primitive          >= 0.5  && < 0.7,
-                       pretty             >= 1.1  && < 1.2,
-                       mwc-random         >= 0.13 && < 0.14,
-                       math-functions     >= 0.1  && < 0.3,
-                       integration        >= 0.2  && < 0.3,
-                       ansi-terminal      >= 0.6,
-                       HUnit              >= 1.2  && < 2.0,
-                       QuickCheck         >= 2.6,
-                       process            >= 1.1  && < 2.0,
-                       mtl                >= 2.1,
-                       vector             >= 0.10,
-                       text               >= 0.11 && < 1.3, 
-                       tasty-hunit-adapter >= 1.0, 
-                       tasty-hunit         >= 0.9, 
-                       tasty               >= 0.8, 
-                       tasty-rerun         >= 1.1.5,
-                       tasty-html          >= 0.4  
+--     Build-Depends:     base               >= 4.6  && < 5.0,
+--                        Cabal              >= 1.16,
+--                        ghc-prim           >= 0.3  && < 0.6,
+--                        indentation-parsec >= 0.0,
+--                        transformers       >= 0.3  && < 0.6,
+--                        containers         >= 0.5  && < 0.6,
+--                        semigroups         >= 0.16,
+--                        logfloat           >= 0.13 && < 0.14,
+--                        parsec             >= 3.1  && < 3.2,
+--                        primitive          >= 0.5  && < 0.7,
+--                        pretty             >= 1.1  && < 1.2,
+--                        mwc-random         >= 0.13 && < 0.14,
+--                        math-functions     >= 0.1  && < 0.3,
+--                        integration        >= 0.2  && < 0.3,
+--                        ansi-terminal      >= 0.6,
+--                        HUnit              >= 1.2  && < 2.0,
+--                        QuickCheck         >= 2.6,
+--                        process            >= 1.1  && < 2.0,
+--                        mtl                >= 2.1,
+--                        vector             >= 0.10,
+--                        text               >= 0.11 && < 1.3, 
+--                        tasty-hunit-adapter >= 1.0, 
+--                        tasty-hunit         >= 0.9, 
+--                        tasty               >= 0.8, 
+--                        tasty-rerun         >= 1.1.5,
+--                        tasty-html          >= 0.4  
 
 ----------------------------------------------------------------
 Executable hakaru
