--- a/examples/tcp/Makefile
+++ b/examples/tcp/Makefile
@@ -7,9 +7,10 @@ run:
 	sh run.sh
 
 clean:
-	rm -f src/naive_bayes_gibbs_simp.hk src/NaiveBayes.hs *.o *.hi *.core
+	cabal clean
 
 distclean : clean
+	rm -f src/naive_bayes_gibbs_simp.hk src/NaiveBayes.hs *.o *.hi *.core
 	rm -rf 20news-19997.tar.gz 20_newsgroups
 
 src/naive_bayes_gibbs_simp.hk: 
@@ -19,7 +20,7 @@ src/NaiveBayes.hs: src/naive_bayes_gibbs_simp.hk
 	compile src/naive_bayes_gibbs_simp.hk -o src/NaiveBayes.hs -M NaiveBayes
 
 build: src/NaiveBayes.hs data
-	stack build
+	cabal install -v
 
 # %.hs : %.hk
 #       compile $<
