--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,3 +19,6 @@ test_script:
 # The ugly echo "" hack is to avoid complaints about 0 being an invalid file
 # descriptor
 - echo "" | stack --no-terminal test
+
+install:
+- set PATH=C:\Program Files\Git\mingw64\bin;%PATH%
