--- a/examples/tcp/tcp.cabal
+++ b/examples/tcp/tcp.cabal
@@ -15,8 +15,9 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Data.News
+  exposed-modules:     News
                      , Scaffold
+                     , NaiveBayes
   build-depends:       base >= 4.7 && < 5
                      , unordered-containers
                      , containers
