--- a/examples/tcp/stack.yaml
+++ b/examples/tcp/stack.yaml
@@ -17,6 +17,9 @@
 #  location: "./custom-snapshot.yaml"
 resolver: lts-8.4
 
+build:
+  executable-profiling: true
+
 # User packages to be built.
 # Various formats can be used as shown in the example below.
 # 
@@ -41,7 +44,6 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps: []
-
 
 # Override default flag values for local packages and extra-deps
 flags: {}
