--- a/examples/tcp/tcp.cabal
+++ b/examples/tcp/tcp.cabal
@@ -35,12 +35,18 @@ library
 executable tcp
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         
+    -O2 
+    -threaded 
+    -fprof-auto 
+    -rtsopts 
+    "-with-rtsopts=-N -p -s -h -i0.1"
   build-depends:       base
                      , tcp
                      , unordered-containers
                      , bytestring
                      , mwc-random
+                     , vector
   default-language:    Haskell2010
 
 test-suite tcp-test
