--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -181,6 +181,21 @@ Executable compile
                        hakaru               >= 0.3
 
 ----------------------------------------------------------------
+Executable summary
+    Main-is:           Summary.hs
+    Hs-Source-Dirs:    commands
+    Default-Language:  Haskell2010
+    GHC-Options:       -O2 -Wall -fwarn-tabs
+
+    build-depends:     base                 >= 4.7  && < 5.0,
+                       mwc-random           >= 0.13 && < 0.14,
+                       text                 >= 0.11 && < 1.3,
+                       pretty               >= 1.1  && < 1.2,
+                       filepath             >= 1.3,
+                       optparse-applicative >= 0.11 && < 0.14,
+                       hakaru               >= 0.3
+
+----------------------------------------------------------------
 Executable simplify
     Main-is:           Simplify.hs
     Hs-Source-Dirs:    commands
