nondescriptive comment (sorry)

--- a/examples/tcp/Makefile
+++ b/examples/tcp/Makefile
@@ -7,17 +7,19 @@ run:
 	sh run.sh
 
 clean:
+	rm -f src/NaiveBayes.hs src/naive_bayes_simp.hk
 	stack clean
 
 distclean : clean
-	rm -f src/naive_bayes_gibbs_simp.hk src/NaiveBayes.hs *.o *.hi *.core
+	rm -f src/naive_bayes_simp.hk src/NaiveBayes.hs *.o *.hi *.core
 	rm -rf 20news-19997.tar.gz 20_newsgroups
 
-src/naive_bayes_gibbs_simp.hk: 
+src/naive_bayes_gibbs_simp.hk:
 	simplify src/naive_bayes_gibbs.hk > src/naive_bayes_gibbs_simp.hk
 
-src/NaiveBayes.hs: src/naive_bayes_gibbs_simp.hk
-	compile src/naive_bayes_gibbs_simp.hk -o src/NaiveBayes.hs -M NaiveBayes
+src/NaiveBayes.hs: src/naive_bayes_simp.hk
+	# compile src/naive_bayes_simp.hk -o src/NaiveBayes.hs -M NaiveBayes
+	summary src/naive_bayes_gibbs_simp.hk -o src/NaiveBayes.hs -M NaiveBayes
 
 build: src/NaiveBayes.hs data
 	stack build
