Misc fixes to tcp

--- a/examples/naive_bayes/Makefile
+++ b/examples/naive_bayes/Makefile
@@ -13,7 +13,7 @@ naive_bayes_gibbs_simp.hk: naive_bayes_gibbs.hk
 	simplify naive_bayes_gibbs.hk > naive_bayes_gibbs_simp.hk
 
 NaiveBayes.hs: naive_bayes_gibbs_simp.hk
-	compile naive_bayes_gibbs_simp.hk -o NaiveBayes.hs -M NaiveBayes
+	compile naive_bayes_gibbs_simp.hk -o NaiveBayes.hs -M NaiveBayes --logfloat-prelude
 
 build: NaiveBayes.hs data-file
 	ghc -O2 --make Scaffold -o NaiveBayes
