--- a/examples/tcp/tcp.cabal
+++ b/examples/tcp/tcp.cabal
@@ -39,12 +39,13 @@ executable tcp
     -O2 
     -threaded 
     -fprof-auto 
-    -rtsopts 
-    "-with-rtsopts=-N -p -s -h -i0.1"
+ --   -rtsopts 
+ --   "-with-rtsopts=-N -p -s -h -i0.1"
   build-depends:       base
                      , tcp
                      , unordered-containers
                      , bytestring
+                     , logfloat
                      , mwc-random
                      , vector
   default-language:    Haskell2010
